--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,9 @@ spring.mvc.view.suffix=.jsp
 
 #kafka properties
 kafka.bootstrapAddress=localhost:9092
-message.topic.name=topic1
+message.topic.name=baeldung
 greeting.topic.name=greeting
 filtered.topic.name=filtered
 partitioned.topic.name=partitioned
+
+eunjin.topic.name=topic1
